--- a/Platfom/ModuleData_win32/ModuleData_win32/ModuleData_win32.vcxproj.filters
+++ b/Platfom/ModuleData_win32/ModuleData_win32/ModuleData_win32.vcxproj.filters
@@ -213,6 +213,15 @@
     <ClCompile Include="GeneratedFiles\Release\moc_DSManualControlDialog.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\Source\Mark.cpp">
+      <Filter>Source\Chart\ChartWidget</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_Mark.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_Mark.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\..\..\Source\ModuleData.h">
@@ -256,6 +265,9 @@
     </CustomBuild>
     <CustomBuild Include="..\..\..\Source\DSManualControlDialog.h">
       <Filter>Source\DataSource\Items\ManualControl\Widget</Filter>
+    </CustomBuild>
+    <CustomBuild Include="..\..\..\Source\Mark.h">
+      <Filter>Source\Chart\ChartWidget</Filter>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
